src/objects/Account__e.object
<CustomObject>
    <description>Platform event definition to be used for ALL Account record changes that require an integration with MuleSoft.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>18 character, case insensitive, Salesforce record Id representing the record that was modified.</description>
        <label>AccountId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record type of the record that was changed.</description>
        <label>RecordType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of operation that resulted in the platform event being fired (Create, Update, Delete, Undelete).</description>
        <label>Type</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account PE</label>
    <pluralLabel>Accounts PE</pluralLabel>
</CustomObject>